samples/_failures_safe/1761338811_ee7526_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bee03df1.c: In function ‘main’:
./samples/SAFE/__tmp_bee03df1.c:134:9: error: expected expression at end of input
  134 |         return
      |         ^~~~~~
./samples/SAFE/__tmp_bee03df1.c:134:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_bee03df1.c:134:9: error: expected declaration or statement at end of input
